--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Mateus da Silva</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://www.nerdfonts.com/assets/css/webfont.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 </head>
 
 <body>
@@ -15,11 +18,12 @@
                 <img src="img/selfie.jpg" class="selfie">
             </div>
             <div class="info">
-                <h3>Mateus Felipe da Silva</h3>
-                <a href="mailto:ext.mateus@gmail.com"><i class="nf-md-gmail"></i></a>
-                <a href="https://www.linkedin.com/in/mateus-felipe-da-silva-5b528a288/"><i class="nf-md-linkedin"></i></a>
-                <a href="https://github.com/modestosrc"><i class="nf-md-github"></i></a>
-                <a href="https://wa.me/5555996585513"><i class="nf-md-whatsapp"></i></a>
+                <h3><a href="index.html">Mateus Felipe da Silva</a></h3>
+                <a href="mailto:ext.mateus@gmail.com"><i class="nf-md-gmail" style="font-size: 20pt;"></i></a>
+                <a href="https://www.linkedin.com/in/mateus-felipe-da-silva-5b528a288/"><i
+                        class="nf-md-linkedin" style="font-size: 20pt;"></i></a>
+                <a href="https://github.com/modestosrc"><i class="nf-md-github" style="font-size: 20pt;"></i></a>
+                <a href="https://wa.me/5555996585513"><i class="nf-md-whatsapp" style="font-size: 20pt;"></i></a>
                 <a href=""><i class=""></i></a>
                 <p><i class="nf-md-gmail" style="font-size: 15pt;"></i>ext.mateus@gmail.com</p>
                 <p><i class="nf-md-phone" style="font-size: 15pt;"></i>(55) 9996585513</p>
@@ -27,10 +31,13 @@
         </div>
         <div class="main">
             <div>
-                <p>Teste 123</p>
-                <a href="https://www.credly.com/badges/a296d87e-2734-4daf-98ae-ab72b136129e"><img src="https://images.credly.com/size/340x340/images/00634f82-b07f-4bbd-a6bb-53de397fc3a6/image.png"></a>
-                <a href="https://www.credly.com/badges/8281bc4a-5ecb-4982-9869-63679db0f8ca"><img src="https://images.credly.com/size/340x340/images/2784d0d8-327c-406f-971e-9f0e15097003/image.png"></a>
-                <a href="https://www.credly.com/badges/8f9ec53f-9cb5-4f26-ac78-1eae9f2f9e58"><img src="https://images.credly.com/size/340x340/images/81f903ed-c3a1-4f4b-afcd-e03331a5b12c/image.png"></a>
+                <p>Teste 123 >=</p>
+                <a href="https://www.credly.com/badges/a296d87e-2734-4daf-98ae-ab72b136129e"><img
+                        src="https://images.credly.com/size/340x340/images/00634f82-b07f-4bbd-a6bb-53de397fc3a6/image.png"></a>
+                <a href="https://www.credly.com/badges/8281bc4a-5ecb-4982-9869-63679db0f8ca"><img
+                        src="https://images.credly.com/size/340x340/images/2784d0d8-327c-406f-971e-9f0e15097003/image.png"></a>
+                <a href="https://www.credly.com/badges/8f9ec53f-9cb5-4f26-ac78-1eae9f2f9e58"><img
+                        src="https://images.credly.com/size/340x340/images/81f903ed-c3a1-4f4b-afcd-e03331a5b12c/image.png"></a>
             </div>
         </div>
     </div>
